name:                FizzBuzz
version:             1.0
synopsis:            FizzBuzz in Haskell
description:         FizzBuzz in Haskell
homepage:            https://github.com/scravy/FizzBuzz
license:             PublicDomain
license-file:        LICENSE
author:              Julian Fleischer
maintainer:          julian@scravy.de
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable FizzBuzz
  main-is:             FizzBuzz.hs
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
